test/files/neg/t8157.check
t8157.scala:1: error: in object Test, multiple overloaded alternatives of method foo define default arguments.
object Test {
       ^
1 error
